tests/samples/negative/resources/move_borrow_or_pattern_alias_after_move.ax
module move_borrow_or_pattern_alias_after_move;

enum MaybeBorrow[T] {
    some(&T),
    other(&T),
    none,
}

fn consume[T](value: T) -> void {
}

fn inspect[T](value: &T) -> void {
}

fn duplicate[T](value: T) -> void {
    let .some(borrowed) | .other(borrowed) = MaybeBorrow[T].some(&value) else {
        return;
    };
    consume(value);
    inspect(borrowed);
}

fn main() -> i32 {
    return 0;
}
